--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,6 @@
     <script>
       System.import('main.js').catch(function(err){ console.error(err); });
     </script>
-    <opus-assignment-main>Loading...</opus-assignment-main>
+    <authentication>Loading...</authentication>
   </body>
 </html>
