--- a/emailTemplates/verification.html
+++ b/emailTemplates/verification.html
@@ -10,6 +10,8 @@
       <p>Welcome! Please follow this link to verify your email.</p>
       
       <p>Please copy this link into your browser: http://localhost:6060/#/validating/{{token}}</p>
+
+      <p>Thank you<p>
     </div>
   </body>
 </html>
