users can add other users now

--- a/emailTemplates/passwordReset.html
+++ b/emailTemplates/passwordReset.html
@@ -7,7 +7,7 @@
     <div>
       <p>Hi, {{firstName}}</p>
       
-      <p>Please copy this link into your browser to reset your password: http://localhost:6060/#/resetPassword/{{token}}</p>
+      <p>Please click or copy this link into your browser to reset your password: http://localhost:6060/#/resetPassword/{{token}}</p>
 
       <p>If you did not request a password reset then ignore this email.</p>
 
