--- a/emailTemplates/verification.html
+++ b/emailTemplates/verification.html
@@ -9,7 +9,7 @@
 
       <p>Welcome! Please follow this link to verify your email.</p>
       
-      <p>Please copy this link into your browser: http://localhost:6060/#/validating/{{token}}</p>
+      <p>Please click or copy this link into your browser: http://localhost:6060/#/validating/{{token}}</p>
 
       <p>Thank you<p>
     </div>
