all functionality is working

--- a/emailTemplates/newUser.html
+++ b/emailTemplates/newUser.html
@@ -9,7 +9,7 @@
 
       <p>You've been added to the user app</p>
       
-      <p>Please click or copy this link into your browser to set your password: http://localhost:6060/#/resetPassword/{{token}}</p>
+      <p>Please click or copy this link into your browser to set your password: http://localhost:6060/#/setPassword/{{token}}</p>
 
       <p>If you have no idea what this is about then ignore this email.</p>
 
